--- a/_includes/content.html
+++ b/_includes/content.html
@@ -5,9 +5,10 @@
 
 <h2>Features</h2>
 <ul>
-  <li>Responsive design</li>
-  <li>Mobile friendly</li>
-  <li>Easy deployment to <a href="https://pages.github.com/">GitHub Pages</a></li>
+  <li>Lua scripts</li>
+  <li>Entities and components system</li>
+  <li>For Linux, Windows and HTML5</li>
+  <li>HTML5 User Interface</li>
 </ul>
 
 <hr />
@@ -15,6 +16,14 @@
 <ul class="fa-ul main-list">
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine">gengine on GitHub</a>
+    <a href="https://github.com/gogoprog/gengine">gengine</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-github fa-lg main-list-item-icon"></span>
+    <a href="https://github.com/gogoprog/gengine-samples">gengine-samples</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-github fa-lg main-list-item-icon"></span>
+    <a href="https://github.com/gogoprog/gengine.wiki">gengine.wiki</a>
   </li>
 </ul>
