--- a/_includes/content.html
+++ b/_includes/content.html
@@ -24,6 +24,6 @@
   </li>
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine.wiki">gengine.wiki</a>
+    <a href="https://github.com/gogoprog/gengine/wiki">gengine/wiki</a>
   </li>
 </ul>
