--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,6 +1,8 @@
 <h2>Demos</h2>
 <ul>
-  <li><a href="http://gengine-isometric.bitballoon.com/">Isometric</a></li>
+  <li><a href="http://gengine-isometric.bitballoon.com/">Isometric test</a></li>
+  <li><a href="http://village-cool-guys.bitballoon.com/">A strategy game</a></li>
+  <li><a href="http://gengine-particles-editor.bitballoon.com/">A particles editor</a></li>
 </ul>
 
 <h2>Features</h2>
@@ -9,6 +11,11 @@
   <li>Entities and components system</li>
   <li>For Linux, Windows and HTML5</li>
   <li>HTML5 User Interface</li>
+</ul>
+
+<h2>Documentation</h2>
+<ul>
+  <li><a href="https://github.com/gogoprog/gengine/wiki">Wiki is here</a></li>
 </ul>
 
 <hr />
@@ -21,9 +28,5 @@
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
     <a href="https://github.com/gogoprog/gengine-samples">gengine-samples</a>
-  </li>
-  <li class="main-list-item">
-    <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine/wiki">gengine/wiki</a>
   </li>
 </ul>
