--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,4 +1,9 @@
-<h2>Demos</h2>
+<h2>Downloads</h2>
+<ul>
+  <li><a href="https://bintray.com/artifact/download/gogoprog/gengine/gengine-win.zip">Binary release for Windows</a></li>
+</ul>
+
+<h2>HTML5 Demos</h2>
 <ul>
   <li><a href="http://gengine-isometric.bitballoon.com/">Isometric test</a></li>
   <li><a href="http://village-cool-guys.bitballoon.com/">A strategy game</a></li>
@@ -29,4 +34,9 @@
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
     <a href="https://github.com/gogoprog/gengine-samples">gengine-samples</a>
   </li>
+  <li class="main-list-item">
+    <span class="fa fa-trello fa-lg main-list-item-icon"></span>
+    <a href="https://trello.com/b/2Rhj6BcD/gengine-roadmap">Roadmap</a>
+  </li>
 </ul>
+
