--- a/_includes/content.html
+++ b/_includes/content.html
@@ -5,6 +5,7 @@
 
 <h2>HTML5 Demos</h2>
 <ul>
+  <li><a href="http://gengine-spine.bitballoon.com/">Spine sample</a></li>
   <li><a href="http://gengine-isometric.bitballoon.com/">Isometric test</a></li>
   <li><a href="http://village-cool-guys.bitballoon.com/">A strategy game</a></li>
   <li><a href="http://gengine-particles-editor.bitballoon.com/">A particles editor</a></li>
@@ -16,6 +17,8 @@
   <li>Entities and components system</li>
   <li>For Linux, Windows and HTML5</li>
   <li>HTML5 User Interface</li>
+  <li>Spine animation support</li>
+  <li>Spriter animation support</li>
 </ul>
 
 <h2>Documentation</h2>
@@ -39,4 +42,3 @@
     <a href="https://trello.com/b/2Rhj6BcD/gengine-roadmap">Roadmap</a>
   </li>
 </ul>
-
