Updated descriptions for new gengine

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,9 +1,10 @@
 <h2>Downloads</h2>
 <ul>
-  <li><a href="https://bintray.com/artifact/download/gogoprog/gengine/gengine-win.zip">Binary release for Windows</a></li>
+  <li><a href="todo">Binary release for Windows</a></li>
 </ul>
 
 <h2>HTML5 Demos</h2>
+Old demos:
 <ul>
   <li><a href="http://gengine-spine.bitballoon.com/">Spine sample</a></li>
   <li><a href="http://gengine-isometric.bitballoon.com/">Isometric test</a></li>
@@ -13,17 +14,16 @@
 
 <h2>Features</h2>
 <ul>
-  <li>Lua scripts</li>
-  <li>Entities and components system</li>
-  <li>For Linux, Windows and HTML5</li>
+  <li>Haxe support</li>
+  <li>Ash framework</li>
+  <li>For Linux and HTML5</li>
   <li>HTML5 User Interface</li>
-  <li>Spine animation support</li>
-  <li>Spriter animation support</li>
+  <li>Urho3D as the backend</li>
 </ul>
 
 <h2>Documentation</h2>
 <ul>
-  <li><a href="https://github.com/gogoprog/gengine/wiki">Wiki is here</a></li>
+  <li><a href="http://gogoprog.github.io/gengine/doc/pages/">Generated doc pages</a></li>
 </ul>
 
 <hr />
