--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,15 +1,15 @@
 <h2>Downloads</h2>
 <ul>
-  <li><a href="todo">Binary release for Windows</a></li>
+  <li><a href="https://github.com/gogoprog/gengine/releases/latest" target="_blank">Latest release</a></li>
 </ul>
 
 <h2>HTML5 Demos</h2>
 Old demos:
 <ul>
-  <li><a href="http://gengine-spine.bitballoon.com/">Spine sample</a></li>
-  <li><a href="http://gengine-isometric.bitballoon.com/">Isometric test</a></li>
-  <li><a href="http://village-cool-guys.bitballoon.com/">A strategy game</a></li>
-  <li><a href="http://gengine-particles-editor.bitballoon.com/">A particles editor</a></li>
+  <li><a href="http://gengine-spine.bitballoon.com/" target="_blank">Spine sample</a></li>
+  <li><a href="http://gengine-isometric.bitballoon.com/" target="_blank">Isometric test</a></li>
+  <li><a href="http://village-cool-guys.bitballoon.com/" target="_blank">A strategy game</a></li>
+  <li><a href="http://gengine-particles-editor.bitballoon.com/" target="_blank">A particles editor</a></li>
 </ul>
 
 <h2>Features</h2>
