--- a/_includes/content.html
+++ b/_includes/content.html
@@ -23,7 +23,7 @@ Old demos:
 
 <h2>Documentation</h2>
 <ul>
-  <li><a href="http://gogoprog.github.io/gengine/doc/pages/">Generated doc pages</a></li>
+  <li><a href="http://gogoprog.github.io/gengine/doc/pages/" target="_blank">Generated doc pages</a></li>
 </ul>
 
 <hr />
@@ -31,14 +31,14 @@ Old demos:
 <ul class="fa-ul main-list">
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine">gengine</a>
+    <a href="https://github.com/gogoprog/gengine" target="_blank">gengine</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine-samples">gengine-samples</a>
+    <a href="https://github.com/gogoprog/gengine-samples" target="_blank">gengine-samples</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-trello fa-lg main-list-item-icon"></span>
-    <a href="https://trello.com/b/2Rhj6BcD/gengine-roadmap">Roadmap</a>
+    <a href="https://trello.com/b/2Rhj6BcD/gengine-roadmap" target="_blank">Roadmap</a>
   </li>
 </ul>
