--- a/_includes/content.html
+++ b/_includes/content.html
@@ -4,12 +4,8 @@
 </ul>
 
 <h2>HTML5 Demos</h2>
-Old demos:
 <ul>
-  <li><a href="http://gengine-spine.bitballoon.com/" target="_blank">Spine sample</a></li>
-  <li><a href="http://gengine-isometric.bitballoon.com/" target="_blank">Isometric test</a></li>
-  <li><a href="http://village-cool-guys.bitballoon.com/" target="_blank">A strategy game</a></li>
-  <li><a href="http://gengine-particles-editor.bitballoon.com/" target="_blank">A particles editor</a></li>
+  <li><a href="http://gogoprog.github.io/gengine-samples/" target="_blank">Samples</a></li>
 </ul>
 
 <h2>Features</h2>
