--- a/_includes/content.html
+++ b/_includes/content.html
@@ -19,7 +19,7 @@
 
 <h2>Documentation</h2>
 <ul>
-  <li><a href="http://gogoprog.github.io/gengine/doc/pages/" target="_blank">Generated doc pages</a></li>
+  <li><a href="http://gogoprog.github.io/gengine/" target="_blank">Generated doc pages</a></li>
 </ul>
 
 <hr />
