--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,4 +1,4 @@
-<h2>Downloads</h2>
+<h2>Download</h2>
 <ul>
   <li><a href="https://github.com/gogoprog/gengine/releases/latest" target="_blank">Latest release</a></li>
 </ul>
@@ -19,7 +19,13 @@
 
 <h2>Documentation</h2>
 <ul>
-  <li><a href="http://gogoprog.github.io/gengine/" target="_blank">Generated doc pages</a></li>
+  <li><a href="http://gogoprog.github.io/gengine/" target="_blank">API documentation</a></li>
+  <li><a href="https://github.com/gogoprog/gengine-samples/" target="_blank">Samples source code</a></li>
+</ul>
+
+<h2>Support</h2>
+<ul>
+  <li><a href="https://webchat.freenode.net/?channels=gengine" target="_blank">#gengine on irc.freenode.net</a></li>
 </ul>
 
 <hr />
@@ -28,10 +34,6 @@
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
     <a href="https://github.com/gogoprog/gengine" target="_blank">gengine</a>
-  </li>
-  <li class="main-list-item">
-    <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/gogoprog/gengine-samples" target="_blank">gengine-samples</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-trello fa-lg main-list-item-icon"></span>
